--- a/map.html
+++ b/map.html
@@ -122,6 +122,10 @@
         </div>
     </div>
     <script>
+
+        // $(document).ready(function() {
+        //     $('.components-list-left ul li:first-child').trigger('click')
+        // })
        var entityMap = {'&': '&amp;','<': '&lt;','>': '&gt;','"': '&quot;',"'": '&#39;','/': '&#x2F;','`': '&#x60;','=': '&#x3D;'};
 
         function escapeHtml (string) {
